--- a/cnt/resources/css/font.css
+++ b/cnt/resources/css/font.css
@@ -14,14 +14,14 @@ http://scripts.sil.org/OFL
     font-style: normal;
     font-weight: 100;
 	font-display: swap;
-    src: local('Noto Sans JP Thin'), local('Noto Sans JP-Thin'), url('../font/NotoSansJP-Thin.otf') format('otf');
+    src: local('Noto Sans JP Thin'), local('Noto Sans JP-Thin'), url('/resources/font/NotoSansJP-Thin.woff') format('woff') ;
 }
 @font-face {
     font-family: 'Noto Sans JP';
     font-style: normal;
     font-weight: 300;
 	font-display: swap;
-    src: local('Noto Sans JP Light'), local('Noto Sans JP-Light'), url('../font/NotoSansJP-Light.otf') format('otf');
+    src: local('Noto Sans JP Light'), local('Noto Sans JP-Light'), url('/resources/font/NotoSansJP-Light.woff') format('woff');
 }
 
 @font-face {
@@ -29,21 +29,21 @@ http://scripts.sil.org/OFL
     font-style: normal;
     font-weight: 400;
 	font-display: swap;
-    src: local('Noto Sans JP Regular'), local('Noto Sans JP-Regular'), url('../font/NotoSansJP-Regular.otf') format('otf');
+    src: local('Noto Sans JP Regular'), local('Noto Sans JP-Regular'), url('/resources/font/NotoSansJP-Regular.woff') format('woff');
 }
 @font-face {
     font-family: 'Noto Sans JP';
     font-style: normal;
     font-weight: 500;
 	font-display: swap;
-    src: local('Noto Sans JP Medium'), local('Noto Sans JP-Medium'), url('../font/NotoSansJP-Medium.otf') format('otf');
+    src: local('Noto Sans JP Medium'), local('Noto Sans JP-Medium'), url('/resources/font/NotoSansJP-Medium.woff') format('woff');
 }
 @font-face {
     font-family: 'Noto Sans JP';
     font-style: normal;
     font-weight: 700;
 	font-display: swap;
-    src: local('Noto Sans JP Bold'), local('Noto Sans JP-Bold'), url('../font/NotoSansJP-Bold.otf') format('otf');
+    src: local('Noto Sans JP Bold'), local('Noto Sans JP-Bold'), url('/resources/font/NotoSansJP-Bold.woff') format('woff');
 }
 
 /* Pretendard */
@@ -52,33 +52,32 @@ http://scripts.sil.org/OFL
     font-style: normal;
 	font-weight: 100;
 	font-display: swap;
-	src: local('Pretendard Thin'), url('../font/Pretendard-Thin.otf') format('otf');
+	src: local('Pretendard Thin'), url('/resources/font/Pretendard-Thin.woff') format('woff');
 }
 @font-face {
 	font-family: 'Pretendard';
     font-style: normal;
 	font-weight: 300;
 	font-display: swap;
-	src: local('Pretendard Light'), url('../font/Pretendard-Light.otf') format('otf');
+	src: local('Pretendard Light'), url('/resources/font/Pretendard-Light.woff') format('woff');
 }
 @font-face {
 	font-family: 'Pretendard';
     font-style: normal;
 	font-weight: 400;
 	font-display: swap;
-	src: local('Pretendard Regular'), url('../font/Pretendard-Regular.otf') format('otf');
+	src: local('Pretendard Regular'), url('/resources/font/Pretendard-Regular.woff') format('woff');
 }
 @font-face {
 	font-family: 'Pretendard';
     font-style: normal;
 	font-weight: 500;
 	font-display: swap;
-	src: local('Pretendard Medium'), url('../font/Pretendard-Medium.otf') format('otf');
+	src: local('Pretendard Medium'), url('/resources/font/Pretendard-Medium.woff') format('woff');
 }
 @font-face {
 	font-family: 'Pretendard';
-    font-style: normal;
 	font-weight: 700;
 	font-display: swap;
-	src: local('Pretendard Bold'), url('../font/Pretendard-Bold.otf') format('otf');
+	src: local('Pretendard Bold'), url('/resources/font/Pretendard-Bold.woff') format('woff');
 }
