--- a/cnt/resources/css/common.css
+++ b/cnt/resources/css/common.css
@@ -46,25 +46,35 @@
 .header .gnb.mobile .gnb_sub > ul li .depth2 li {margin-bottom: 0}
 .header .gnb.mobile .gnb_sub > ul li .depth2 li a{font-size:1.6rem;line-height: 250%;}
 
-
-.main .visual {padding:60px 25px 247px;}
+.main {position:relative;padding-bottom:69px;background:url(/resources/img/main/img_main_visual.jpg) no-repeat top center;background-size: 100% auto;}
+.main:after {content:'';position:absolute;left:0;right:0;bottom:0;padding-bottom:266.4%;background: linear-gradient(180deg, rgba(5, 79, 164, 0.00) 4.33%, #054FA4 30.24%);}
+.main .visual {padding:60px 25px 247px;;}
 .main .visual .title{margin-bottom:30px;font-family: 'Pretendard';font-size: 3.6rem;font-weight: 700;line-height: 120%;color:var(--white)}
-.main .visual .sub {font-size:1.6rem;font-weight:500;line-height: 150%; color:var(--white)}
+.main .visual .sub {font-size:1.6rem;font-weight:100;line-height: 150%; color:var(--white)}
 
-.main .info {margin: 0 24px;padding:45px 24px 36px;background-color:var(--white);border-radius: 10px;}
+.main .info {position:relative;margin: 0 24px;padding:45px 24px 36px;background-color:var(--white);border-radius: 10px;z-index: 1;}
 .main .info .title{margin-bottom:16px;font-size: 2.2rem;font-weight: 500;line-height: 160%;text-align: center;}
 .main .info .sub{font-size: 1.4rem;line-height: 160%;color:#5D626C;text-align: center;}
 .main .info ul{display:flex;flex-direction: column;row-gap: 20px;margin-top:45px;}
-.main .info ul li{color:var(--basic_blue);}
+.main .info ul li{color:var(--basic_blue);font-size: 1.8rem;}
 .main .info ul li img {margin-right: 26px;}
 
 
 
 
+.company {padding:67px 0 122px;}
+.company article {position:relative;margin-bottom:192px;}
+.company article:after {content:'';position: absolute;left:50%;bottom:-69px;transform: translate(-50%, 0)display: block;width:3px;height:45px;background-color:var(--basic-dark-navy);;}
+.company article .title {font-size: 2.8rem;font-weight: 500;color:var(----basic-dark-navy);text-align: center;}
 
+.company article .sub {font-size: 1.6rem;color:var(----basic-dark-navy);line-height:160%;text-align: center;}
+.company ul {}
+.company ul li {}
 
+.company ul li b {font-size: 2rem;font-weight: 500;line-height: 150%;color:var(--basic_blue)}
 
-
+.company ul li div {margin-top: 15px;font-size: 1.4rem;line-height: 160%;color:var(--grey01)}
+.company ul li a {}
 
 
 
