--- a/cnt/resources/css/reset.css
+++ b/cnt/resources/css/reset.css
@@ -6,7 +6,7 @@ input, select{margin:0;padding:0;font-style:normal;font-variant:normal;font-weig
 legend {display:none;}
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section{display:block}
-html, body{font-family:'Noto Sans JP', 'Malgun Gothic','맑은 고딕','Apple SD Gothic Neo','AppleGothic','NanumGothic','나눔고딕','Droid sans','Microsoft NeoGothic';-webkit-text-size-adjust:none;font-size: 10px;font-weight:400;color:#333;}
+html, body{font-family:'Noto Sans JP';-webkit-text-size-adjust:none;font-size: 10px;font-weight:400;color:#333;}
 li{list-style:none}
 blockquote, q{quotes:'"' '"'}
 blockquote:before, blockquote:after, q:before, q:after{content:'';content:none}
