--- a/cnt/resources/css/style.css
+++ b/cnt/resources/css/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-@import url("../css/font.css?");
+@import url("../css/font.css");
 @import url("../css/reset.css");
 @import url("../css/common.css?v1.0");
 
@@ -10,4 +10,5 @@
     --white : #fff;
     --title_navy : #131B2C;
     --basic-dark-navy : #131B2C;
+    --grey01 : #6B6E72;
 }
