--- a/cnt/resources/css/common.css
+++ b/cnt/resources/css/common.css
@@ -2,6 +2,7 @@
 /* header */
 
 .web {display: none;}
+.no_scroll {overflow-y: hidden;}
 
 .header {
     
@@ -30,19 +31,21 @@
 .header .gnb.mobile .gnb_main .menu {display: flex;gap:18px;}
 .header .gnb.mobile .gnb_main .menu .icon_search {background:url(/resources/img/common/icon_search.svg) no-repeat;}
 .header .gnb.mobile .gnb_main .menu .icon_menu {background:url(/resources/img/common/icon_menu.svg) no-repeat;}
-.header .gnb.mobile .gnb_sub {display:none;position:fixed;top:26px;left:0;right:0;width:100%;height: calc(100% - 26px);overflow-y: auto;background-color:var(--white)}
+.header .gnb.mobile .gnb_sub {position:fixed;top:26px;left:auto;right:-100vw;width:100%;height: calc(100% - 26px);overflow-y: auto;background-color:var(--white);transition: all 0.35s ease-in;z-index: 9999;}
+.header .gnb.mobile .gnb_sub.open {right:0;}
 .header .gnb.mobile .gnb_sub .icon_close{position: absolute;top:19px;right:18px;background:url(/resources/img/common/icon_close.svg) no-repeat;}
 .header .gnb.mobile .gnb_sub > ul {padding:59px 20px 0;}
 .header .gnb.mobile .gnb_sub > ul li{margin-bottom: 30px;}
-.header .gnb.mobile .gnb_sub > ul li .depth1{display: flex;justify-content: space-between}
+.header .gnb.mobile .gnb_sub > ul li .depth1{display: flex;justify-content: space-between;align-items: center;}
 .header .gnb.mobile .gnb_sub > ul li .depth1.on a{color:var(--basic_blue);}
 .header .gnb.mobile .gnb_sub > ul li .depth1 a{color:var(--title_navy);font-size: 1.8rem;font-weight: 500;line-height: 150%;}
-.header .gnb.mobile .gnb_sub > ul li .depth1 .icon_toggle {width:14px;height:14px;background: url(/resources/img/common/icon_nav_close.svg) no-repeat;background-size: contain}
+.header .gnb.mobile .gnb_sub > ul li .depth1 .icon_toggle {width:14px;height:14px;background: url(/resources/img/common/icon_nav_close.svg) no-repeat center;background-size: contain}
 
 .header .gnb.mobile .gnb_sub > ul li .depth1 .icon_toggle.open {
-    background:url(/resources/img/common/icon_nav_open.svg) no-repeat; background-size: cover;
+    background:url(/resources/img/common/icon_nav_open.svg) no-repeat center; background-size: cover;
 }
-.header .gnb.mobile .gnb_sub > ul li .depth2{display:none;margin:10px 0 0 20px ;padding-bottom: 16px;border-bottom: 1px solid var(--basic_blue)}
+.header .gnb.mobile .gnb_sub > ul li .depth2{display:none;margin:10px 0 0 0 ;padding: 0 0 16px 20px;border-bottom: 1px solid var(--basic_blue)}
+.header .gnb.mobile .gnb_sub > ul li .depth2.open {display: block;}
 .header .gnb.mobile .gnb_sub > ul li .depth2 li {margin-bottom: 0}
 .header .gnb.mobile .gnb_sub > ul li .depth2 li a{font-size:1.6rem;line-height: 250%;}
 
@@ -50,26 +53,35 @@
 .main:after {content:'';position:absolute;left:0;right:0;bottom:0;padding-bottom:266.4%;background: linear-gradient(180deg, rgba(5, 79, 164, 0.00) 4.33%, #054FA4 30.24%);}
 .main .visual {padding:60px 25px 247px;;}
 .main .visual .title{margin-bottom:30px;font-family: 'Pretendard';font-size: 3.6rem;font-weight: 700;line-height: 120%;color:var(--white)}
-.main .visual .sub {font-size:1.6rem;font-weight:100;line-height: 150%; color:var(--white)}
+.main .visual .sub {font-size:1.6rem;font-weight:500;line-height: 150%; color:var(--white)}
 
 .main .info {position:relative;margin: 0 24px;padding:45px 24px 36px;background-color:var(--white);border-radius: 10px;z-index: 1;}
 .main .info .title{margin-bottom:16px;font-size: 2.2rem;font-weight: 500;line-height: 160%;text-align: center;}
 .main .info .sub{font-size: 1.4rem;line-height: 160%;color:#5D626C;text-align: center;}
+
 .main .info ul{display:flex;flex-direction: column;row-gap: 20px;margin-top:45px;}
 .main .info ul li{color:var(--basic_blue);font-size: 1.8rem;}
-.main .info ul li img {margin-right: 26px;}
+.main .info ul li .icon {position: relative;display: inline-block;width:58px;height:58px;background: url(/resources/img/main/icon_info_bg.svg) no-repeat;background-size: cover;margin-right: 26px;vertical-align: middle;}
+.main .info ul li .icon img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 
 
 
 
 .company {padding:67px 0 122px;}
 .company article {position:relative;margin-bottom:192px;}
-.company article:after {content:'';position: absolute;left:50%;bottom:-69px;transform: translate(-50%, 0)display: block;width:3px;height:45px;background-color:var(--basic-dark-navy);;}
+.company article:after {content:'';position: absolute;left:50%;bottom:-69px;transform: translate(-50%, 0);display: block;width:3px;height:45px;background-color:var(--basic-dark-navy);}
 .company article .title {font-size: 2.8rem;font-weight: 500;color:var(----basic-dark-navy);text-align: center;}
 
 .company article .sub {font-size: 1.6rem;color:var(----basic-dark-navy);line-height:160%;text-align: center;}
-.company ul {}
+.company ul {margin:0 24px;}
 .company ul li {}
+.company ul li .img {position: relative;}
+.company ul li .img span {position: absolute;transform: rotate(90deg);}
 
 .company ul li b {font-size: 2rem;font-weight: 500;line-height: 150%;color:var(--basic_blue)}
 
@@ -91,8 +103,8 @@
 .sustainability .btn a{display: block;position: relative;padding: 9px 58px 10px 24px;font-size: 1.4rem;line-height: 150%;}
 
 .recruiting {padding:20px 0 80px;}
-.recruiting dl {margin-bottom: 20px;padding:60px 0 58px;color:var(--basic_blue);background:url(/resources/img/main/img_recruiting1.jpg) no-repeat;text-align: center}
-.recruiting dl:last-child {margin-bottom: 0;color:var(--white);background:url(/resources/img/main/img_recruiting2.jpg) no-repeat;}
+.recruiting dl {margin-bottom: 20px;padding:60px 0 58px;color:var(--basic_blue);background:url(/resources/img/main/img_recruiting1.jpg) no-repeat;text-align: center;background-size: cover;}
+.recruiting dl:last-child {margin-bottom: 0;color:var(--white);background:url(/resources/img/main/img_recruiting2.jpg) no-repeat;background-size: cover;}
 .recruiting dl .title{font-size: 2rem;font-weight: 700;}
 .recruiting dl .sub{margin-top:10px;font-size: 1.4rem;line-height: 160%;text-transform: uppercase}
 
