--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,12 +3,14 @@
 @import url("../css/font.css");
 @import url("../css/reset.css");
 @import url("../css/common.css?v1.0");
+@import url("../css/utils.css");
 
 
 :root {
     --basic_blue: #004098;
     --white : #fff;
     --title_navy : #131B2C;
+    --title_error : red;
     --basic-dark-navy : #131B2C;
     --grey01 : #6B6E72;
     --grey04 : #B3B5B9;
