--- a/resources/css/utils.css
+++ b/resources/css/utils.css
@@ -1480,10 +1480,10 @@
 
 .c_text input {
     width: 100%;
-    padding: 15px 0;
+    padding: 17px 0;
     background: var(--white);
     border: none;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     color: var(--basic-dark-navy);
     line-height: 150%;
     box-sizing: border-box;
@@ -1491,12 +1491,12 @@
 
 .c_text textarea {
     width: 100%;;
-    padding: 15px 0;
+    padding: 20px 0;
     background: var(--white);
     border: none;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     color: var(--basic-dark-navy);
-    line-height: 150%;
+    line-height: normal;
     box-sizing: border-box;
 }
 
@@ -1513,7 +1513,7 @@
 
 .c_text .textarea textarea {
     height: inherit;
-    padding: 8px;
+    padding: 20px;
     color: inherit;
 }
 
@@ -1526,7 +1526,7 @@
     bottom:-20px;
     left:0;
     color: var(--title_error);
-    font-size: var(--font-size_14);
+    font-size: 1.3rem;
 }
 
 
@@ -1599,23 +1599,22 @@
 .c_radio>input[type="radio"]+label {
     display: flex;
     align-items: center;
-    padding-left: 28px;
-    height: 24px;
+    padding-left: 30px;
     cursor: pointer;
     transition-duration: 0.3s;
-    font-style: normal;
-    font-weight: var(--font_weight-regular);
-    font-size: var(--font-size_16);
-    line-height: var(--line_height-20);
-    color: var(--color_black, #0b132b);
+    font-size: 1.4rem;
+    line-height: normal;
+    color: var(--black);
     width: -moc_fit-content;
     width: fit-content;
-    background: url('data:image/svg+xml,%3Csvg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"%3E%3Cpath fill-rule="evenodd" clip-rule="evenodd" d="M9.99996 1.6665C5.39996 1.6665 1.66663 5.39984 1.66663 9.99984C1.66663 14.5998 5.39996 18.3332 9.99996 18.3332C14.6 18.3332 18.3333 14.5998 18.3333 9.99984C18.3333 5.39984 14.6 1.6665 9.99996 1.6665ZM9.99996 16.6665C6.31662 16.6665 3.33329 13.6832 3.33329 9.99984C3.33329 6.31651 6.31662 3.33317 9.99996 3.33317C13.6833 3.33317 16.6666 6.31651 16.6666 9.99984C16.6666 13.6832 13.6833 16.6665 9.99996 16.6665Z" fill="%239FA7B8"/%3E%3C/svg%3E%0A') no-repeat 0 0px / contain;
+    border-width: 1.4px;
+    border: var(--grey04, #B3B5B9);
     white-space: nowrap;
 }
 
 .c_radio>input[type="radio"]:checked+label {
-    background: url('data:image/svg+xml,%3Csvg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"%3E%3Cpath fill-rule="evenodd" clip-rule="evenodd" d="M18.3334 9.99984C18.3334 5.39984 14.6 1.6665 10 1.6665C5.40002 1.6665 1.66669 5.39984 1.66669 9.99984C1.66669 14.5998 5.40002 18.3332 10 18.3332C14.6 18.3332 18.3334 14.5998 18.3334 9.99984ZM16.6667 9.99984C16.6667 13.6832 13.6834 16.6665 10 16.6665C6.31669 16.6665 3.33335 13.6832 3.33335 9.99984C3.33335 6.3165 6.31669 3.33317 10 3.33317C13.6834 3.33317 16.6667 6.3165 16.6667 9.99984Z" fill="%233D98FC"/%3E%3Cpath d="M5.83331 10.0002C5.83331 12.3014 7.69879 14.1668 9.99998 14.1668C12.3012 14.1668 14.1666 12.3014 14.1666 10.0002C14.1666 7.69898 12.3012 5.8335 9.99998 5.8335C7.69879 5.8335 5.83331 7.69898 5.83331 10.0002Z" fill="%233D98FC"/%3E%3C/svg%3E%0A') no-repeat 0 0px / contain;
+    stroke-width: 5px;
+    stroke: var(--basic_blue, #004098);
 }
 
 .c_radio>input[type="radio"] {
@@ -1623,8 +1622,7 @@
 }
 
 .c_radio.single>input[type="radio"]+label {
-    height: 24px;
-    padding-left: 24px;
+    padding-left: 30px;
 }
 
 /*disabled*/
@@ -1717,7 +1715,7 @@
     min-width: auto;
     border-radius: 4px;
     background-color: var(--color_white);
-    c_index: 9;
+    index: 9;
     width: 100%;
     max-height: 430px;
     overflow: auto;
