--- a/resources/css/reset.css
+++ b/resources/css/reset.css
@@ -13,6 +13,7 @@ blockquote:before, blockquote:after, q:before, q:after{content:'';content:none}
 table{border-collapse:collapse;border-spacing:0}
 address{font-style:normal}
 input, select, button, img{vertical-align:middle;outline:none;}
+img {width: 100%;}
 input::placeholder {color:var(--grey04)}
 button{display:block;margin:0;padding:0;border:0;background-color:transparent;font:inherit;color:inherit;cursor:pointer}
 a{font-size:inherit;color:inherit;text-decoration:none}
